Dashboard page user list alignment issue testing

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -305,6 +305,10 @@ $validation-star-color: #fa0f00;
   align-items: center;
   font-size: 20px !important;
 }
+.d-align{
+  display: flex;
+  justify-content: center;
+}
 // .vdpBottom{
 //   display: none !important;
 // }
